# hone-py

./: README.md  pyproject.toml  test_sdk.py
examples/: basic_tracing.py  basic_usage.py  nested_traces.py  openai_wrapper.py
hone/: __init__.py  _background_thread.py  _config.py  _patch.py  agent.py  client.py  decorators.py  exceptions.py  models.py  prompt.py  providers.py  run_helpers.py  schemas.py  tools.py  types.py
hone/integrations/: __init__.py  claude_agents.py  openai_agents.py
hone/wrappers/: __init__.py  anthropic.py  gemini.py  litellm.py  openai.py
tests/: __init__.py  conftest.py  test_agent.py  test_client.py  test_decorators.py  test_models.py  test_prompt.py  test_providers.py  test_sdk.py  test_wrappers.py
tests/integration/: test_sdk_client.py
tests/integration/helpers/: __init__.py  database.py  fixtures.py
