[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hone-sdk"
version = "0.1.0"
description = "Hone SDK - AI Experience Engineering Platform for tracking and improving LLM applications"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Hone Team" }
]
keywords = [
    "ai",
    "llm",
    "tracing",
    "evaluation",
    "observability",
    "langsmith",
    "hone",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "langsmith>=0.2.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.18.0"]
all = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "respx>=0.20.0",
]

[project.urls]
Homepage = "https://honeagents.ai"
Documentation = "https://docs.honeagents.ai"
Repository = "https://github.com/stone-pebble/hone-sdk"

[tool.hatch.build.targets.wheel]
packages = ["hone"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
