[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hone-sdk"
version = "0.1.0"
description = "Hone SDK - AI Experience Engineering Platform for tracking and improving LLM applications"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Hone Team" }
]
keywords = [
    "ai",
    "llm",
    "tracing",
    "evaluation",
    "observability",
    "langsmith",
    "hone",
    "openai",
    "anthropic"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "respx>=0.20.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://honeagents.ai"
Repository = "https://github.com/stone-pebble/hone-sdk"
Issues = "https://github.com/stone-pebble/hone-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["hone"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py39"
